# clipython

./: .coverage  .editorconfig  .gitignore  .gitlab-ci.yml  ChangeLog.md  ComponentLicenseInformation.md  CreateCoverageReport.ps1  EXPORT.yml  License.md  Readme.md  RunChecks.ps1  Upload_to_BT_Artifactory.ps1  build.ps1  demodata.xml  publish-dev-prepare.py  pyproject.toml  setup.py  show_licenses.py  tox.ini
.github/workflows/: python-package.yml  unit-test.yml
SBOM/: sbom.cdx.json
cli/: CLI.py  __init__.py  cli_copyright.py  cli_export_restriction.py  license_tools.py
cli_support/: CLI.py  __init__.py  cli_assessment_summary.py  cli_copyright.py  cli_export_restriction.py  cli_external_id.py  cli_file_item_base.py  cli_general_information.py  cli_irrelevant_files.py  cli_license.py  cli_obligation.py  license_tools.py  xml_base.py
test/: __init__.py  test_cli_clifile.py  test_cli_licensetools.py
test/testfiles/: CLIXML_COMPLETE_simple.xml  CLIXML_Licenses_multi.xml  CLIXML_Licenses_source_shipping.xml
tests/: test_cli_clifile.py  test_cli_licensetools.py
tests/fixtures/: CLIXML_COMPLETE_simple.xml  CLIXML_Full.xml  CLIXML_MIT_simple.xml  CLIXML_Minimal.xml
