[tool.poetry]
name = "cli"
version = "1.3"
description = "Support component license information (CLI) files"
authors = ["Thomas Graf <thomas.graf@siemens.com>"]
license = "MIT"
readme="Readme.md"
include = ["LICENSE.md"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
colorama = "^0.4.3"
flake8 = ">=3.9.2"
requests = "^2.22.0"
pytest = ">=7.2.0"
coverage = ">=6.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
